--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>我在GitHub上搭建的个人网站！</h1>
+                    <h1>这里进行自我介绍，个人信息。</h1>
                     <p>&nbsp;&nbsp;&nbsp;&nbsp;</p>
-                    <a class="btn btn-default page-scroll" href="#about">Click Me to Scroll Down!</a>
+                    <a class="btn btn-default page-scroll" href="#about">点击这里可以去下面!</a>
                 </div>
             </div>
         </div>
@@ -84,7 +84,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>开心不</h1>
+                    <h1>公司信息</h1>
                 </div>
             </div>
         </div>
@@ -95,7 +95,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>激动不</h1>
+                    <h1>经营范围</h1>
                 </div>
             </div>
         </div>
@@ -106,7 +106,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>那赶快动手吧！</h1>
+                    <h1>我的联系方式</h1>
                 </div>
             </div>
         </div>
